applications/envoy-gateway-system/resources/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
  # cguertin.dev + *.cguertin.dev
  - hostname: cguertin.dev
    name: cguertin-dev-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: cguertin-dev-wildcard-cert
        group: ''
        kind: Secret
  - hostname: '*.cguertin.dev'
    name: cguertin-dev-subdomains-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: cguertin-dev-wildcard-cert
        group: ''
        kind: Secret
  # *.k8s.cguertin.dev
  - hostname: '*.k8s.cguertin.dev'
    name: k8s-cguertin-dev-subdomains-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: k8s-cguertin-dev-wildcard-cert
        group: ''
        kind: Secret
  # *.monitoring.k8s.cguertin.dev
  - hostname: '*.monitoring.k8s.cguertin.dev'
    name: monitoring-k8s-cguertin-dev-subdomains-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: monitoring-k8s-cguertin-dev-wildcard-cert
        group: ''
        kind: Secret
  # *.media.cguertin.dev
  - hostname: '*.media.cguertin.dev'
    name: media-cguertin-dev-subdomains-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: media-cguertin-dev-wildcard-cert
        group: ''
        kind: Secret
  # Educs (explicit certs - different issuer)
  - hostname: erabliereducoeursucre.com
    name: educs-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: educs-frontend-cert
        group: ''
        kind: Secret
  - hostname: www.erabliereducoeursucre.com
    name: www-educs-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: www-educs-frontend-cert
        group: ''
        kind: Secret
  - hostname: api.erabliereducoeursucre.com
    name: api-educs-https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: educs-backend-cert
        group: ''
        kind: Secret
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: global-timeout
  namespace: envoy-gateway-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
  timeout:
    http:
      requestTimeout: 120s
